# aoc-haskell

./: aoc.cabal  aoc2023.cabal  aoc2024.cabal  cabal.project  day
2022/: .cabal-fmt-36526-09k6kCEz0wik  .cabal-fmt-36526-RGchlz5Ienb2  aoc2023.cabal  cabal.project
2022/src/: Day04.hs  Lib.hs
2024/: .cabal-fmt-36526-09k6kCEz0wik  .cabal-fmt-36526-RGchlz5Ienb2  Day03.hs  DayXY_template.hs  README.md  aoc2024.cabal
2024/src/: Day01.hs  Day02.hs  Day04.hs
2024/test/: Main.hs
archive/2022/src/: Day02.hs  Day03.hs
archive/2022/test/: Main.hs
src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  DayXY_template.hs
test/: Main.hs
util/: Lib.hs
