cabal-version:      3.0
name:               aoc
version:            0.1.0.0
data-dir:          data
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Day01
        Day02
        Day03
        Day04
        Day05
        Day06
        Day07
        Day08
        Day09
        Day10
        Day11
        Day12
        Day13
        Day14
        Day15
        Day16
        Day17
        Day18
        Day19
        Day20
        Day21
        Day22
        Day23
        Day24
        Day25
        Lib
    other-modules:
        Paths_aoc
    autogen-modules:
        Paths_aoc
    hs-source-dirs:   src
                    , util
    default-language: Haskell2010
    ghc-options:      -Wall
    default-extensions:
        OverloadedStrings
    build-depends:
        base ^>=4.17.2.0
        , split ^>=0.2.4
        , containers ^>=0.7
        , vector ^>=0.13.1.0
        , mtl ^>=2.3.1
        , text ^>=2.0
        , array ^>=0.5.4.0
        , parsec ^>=3.1.16.1

executable aoc
    main-is:          Main.hs
    hs-source-dirs:   . 
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:    
        base ^>=4.17.2.0
        , aoc

test-suite test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    build-depends:    
        base ^>=4.17.2.0
        , aoc
        , hspec
