cabal-version:      3.0
name:               AOC
version:            0.1.0.0

data-dir: data_2024

common warnings
    ghc-options: -Wall -Werror

library AOCUtil
  exposed-modules:     Lib
  hs-source-dirs:      util
  build-depends:       base, containers, parsec, linear
  default-language:    Haskell2010

library AOC2024
    hs-source-dirs:   2024
    exposed-modules: Year2024
    other-modules:   Day01
    build-depends:    base,
                     split,
                     containers,
                     vector,
                     mtl,
                     AOCUtil
    default-language: Haskell2010

executable AOC
  main-is:          Main.hs
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:    base, containers, AOC2024, AOCUtil
  default-extensions:
    OverloadedStrings

test-suite test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    build-depends:    base,
                     hspec,
                     aoc2024
